Save the sessionId in the local storage.

--- a/views/index.html
+++ b/views/index.html
@@ -15,5 +15,8 @@
 		<div><label for="value2">Value 2:</label><input type="text" name="value2" id="value2" value=""></div>
 		<div><input type="submit" value="Submit"></div>
 	</form>
+	<script>
+		window.localStorage.setItem('sessionId', '{{ sessionId }}');
+	</script>
 </body>
 </html>
